@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Added compatibility with future crate versions which will serve
+   the admin-ui from `/admin/` instead of `/_plugins/crate-admin/`.
+
  - Improved console results table, including data type based colorization,
    alternating row colorization, structured object/array formatting, human-readable
    timestamps, Google Maps link on geo-point results & lazy loading on result sets
